fix: unable to click project links on mobile

--- a/src/styles/_project.scss
+++ b/src/styles/_project.scss
@@ -77,13 +77,6 @@
   transition: opacity 0.3s;
 }
 
-#filefire:hover::before {
-  border-radius: 5px;
-  opacity: 1;
-  z-index: 10;
-  transition: opacity 0.3s;
-}
-
 #weathercat::before {
   content: '';
   position: absolute;
@@ -99,13 +92,6 @@
   z-index: -1;
 }
 
-#weathercat:hover::before {
-  border-radius: 5px;
-  opacity: 1;
-  z-index: 10;
-  transition: opacity 0.3s;
-}
-
 #coast-connect::before {
   content: '';
   position: absolute;
@@ -119,13 +105,6 @@
   background-repeat: no-repeat;
   background-position: top;
   z-index: -1;
-}
-
-#coast-connect:hover::before {
-  border-radius: 5px;
-  opacity: 1;
-  z-index: 10;
-  transition: opacity 0.3s;
 }
 
 @media screen and (min-width: 1200px) {
